--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ itsdangerous==1.1.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
 numpy==1.18.5
-pandas==1.0.4
+# pandas==1.0.4
 pyodbc==4.0.30
 python-dateutil==2.8.1
 pytz==2020.1
