--- a/config.json
+++ b/config.json
@@ -7,7 +7,7 @@
     "SQL-Server":
     {
         "Driver": "{ODBC Driver 17 for SQL Server}",
-        "Server": "DESKTOP-RV6HJ0G",
+        "Server": "KLXL",
         "Database": "HighSchoolDB",
         "Trusted_Connection": "yes",
         "Connect Timeout": 10
